[package]
name = "rglk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
mktemp = "0.5.0"
unicode-normalization = "0.1.22"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
